Release v1.38.0 Taste Signals Foundation
